fixed jank input text alignment in chrome by removing line-height

--- a/app/sass/context_panel.sass
+++ b/app/sass/context_panel.sass
@@ -249,7 +249,6 @@
         +font(12)
         width: 180px
         height: 24px
-        line-height: 24px
         margin: 0
         padding: 0 0 0 8px
       .skypeWrap
