--- a/app/sass/show_entry.sass
+++ b/app/sass/show_entry.sass
@@ -385,7 +385,6 @@
               width: 230px
               margin: 0 0 0 8px
               height: 26px
-              line-height: 26px
               background: transparent
               border: none
 
